Fixed text color of button for better contrast.

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ textarea {
 
 button {
     background-color: #f76c5e;
-    color: #FFF;
+    color: #000;
     border: none;
     padding: 0.75rem 1.5rem;
     border-radius: 5px;
